Add method /my_bal
